--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,11 +6,15 @@ services:
       - "4000:4000"
     volumes:
       - ./html:/var/www/html
-  mysql:
-    build: ./mysql
-    environment:
-      MYSQL_ROOT_PASSWORD: pass
+  postgres:
+    image: postgres:9.6.7-alpine
     volumes:
-      - db:/var/lib/mysql
+      - ./docker/pg:/var/lib/postgresql
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: countdown_dev
+    ports:
+      - '5433:5432'
 volumes:
   db:
